--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Miley Nguyen
-logo: /assets/img/headshot_circle.png
+logo: ./blob/main/IMG_4237.JPG
 description: Unlocking Answers through Mathematical Data Exploration!
 show_dowloads: true
 theme: jekyll-theme-minimal
